force-app/main/default/objects/Apttus__WizardInputControl2__c/Apttus__WizardInputControl2__c.object-meta.xml
<CustomObject>
    <description>The individual question, instruction statements and associated field attributes</description>
    <label>Wizard Input Control</label>
    <nameField>
        <label>Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Input Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>