force-app/main/default/objects/Apttus__WizardInputControl2__c/fields/Apttus__FieldClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FieldClass__c</fullName>
    <description>Wizard Input Field - A field which exists only within the wizard to make determinations 
Object Field - A field which exists only as a salesforce object to make determinations</description>
    <inlineHelpText>Wizard Input Field - A field which exists only within the wizard to make determinations 
Object Field - A field which exists only as a salesforce object to make determinations</inlineHelpText>
    <label>Field Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wizard Input Field</fullName>
            </value>
            <value>
                <fullName>Object Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>